--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,46 +1,50 @@
 name: Merging to Main
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    push:
+        branches:
+        - main
+    pull_request:
+        branches:
+        - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      # Step 1: Checkout latest code
-      - name: Use latest code
-        uses: actions/checkout@v4
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            # Step 1: Checkout latest code
+            - name: Use latest code
+              uses: actions/checkout@v4
 
-      # Step 2: Setup Node.js for the React frontend
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-      - name: Install frontend dependencies
-        run: |
-          cd ./frontend_PharmaPulse
-          npm install
+            # Step 2: Setup Node.js for the React frontend
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                node-version: '22'
+            - name: Install frontend dependencies
+              run: |
+                cd ./frontend_PharmaPulse
+                npm install
 
-      # Step 3: Setup Java JDK 21 for the Spring Boot backend
-      - name: Setup Java JDK21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
+            # Step 3: Setup Java JDK 21 for the Spring Boot backend
+            - name: Setup Java JDK21
+              uses: actions/setup-java@v4
+              with:
+                java-version: '21'
+                distribution: 'temurin'
+                cache: maven
 
-      # Step 4: Resolve backend dependencies
-      - name: Resolve backend dependencies
-        run: |
-          cd ./backend_PharmaPulse
-          ./mvnw dependency:resolve
+            # Step 4: Make the Maven wrapper executable
+            - name: Grant execute permission for mvnw
+              run: chmod +x ./backend_PharmaPulse/mvnw
 
-      # Step 5: Build the backend with Maven
-      - name: Build backend with Maven
-        run: |
-          cd ./backend_PharmaPulse
-          ./mvnw clean install
+            # Step 5: Resolve backend dependencies
+            - name: Resolve backend dependencies
+              run: |
+                cd ./backend_PharmaPulse
+                ./mvnw dependency:resolve
+
+            # Step 6: Build the backend with Maven
+            - name: Build backend with Maven
+              run: |
+                cd ./backend_PharmaPulse
+                ./mvnw clean install
