Added h2 as In-Memory Database for CI/CD
Configure Spring Boot to use H2 during tests or in the CI/CD environment by using profiles

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -47,4 +47,4 @@ jobs:
             - name: Build backend with Maven
               run: |
                 cd ./backend_PharmaPulse
-                ./mvnw clean install
+                ./mvnw clean install -Dspring.profiles.active=test
