Code quality check workflow added
Linting and Formatting of code will be run for push and pull request of a feature branch

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,11 +1,9 @@
-name: Merging to Main
+name: Buid and Test
 on:
-    push:
-        branches:
-        - main
-    pull_request:
-        branches:
-        - main
+   workflow_run:
+     workflows: ["Code Quality and Linting"]
+     types:
+       - completed
 
 jobs:
     build:
@@ -24,6 +22,7 @@ jobs:
               run: |
                 cd ./frontend_PharmaPulse
                 npm install
+                
 
             # Step 3: Setup Java JDK 21 for the Spring Boot backend
             - name: Setup Java JDK21
