--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "lint:ci":"eslint .",
+    "lint:ci": "eslint .",
     "preview": "vite preview",
     "prepare": "husky"
   },
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "frontend-pharmapulse": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
