New workflow added for feature branches
Workflow to run quality checks on feature branches
Existing workflows has updated

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,13 +1,14 @@
 name: Build and Test
 on:
    workflow_run:
-     workflows: ["Code Quality and Linting"]
+     workflows: ["Deployment Code Quality and Linting"]
      types:
        - completed
+     branches:
+       - main
 
 jobs:
     build:
-        if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main' }}
         runs-on: ubuntu-latest
         steps:
             # Step 1: Checkout latest code
