--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -18,6 +18,8 @@
     "*.css": "stylelint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
