--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
