--- a/backend_PharmaPulse/src/main/resources/application.properties
+++ b/backend_PharmaPulse/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 spring.application.name=backend_PharmaPulse
 server.port=8090
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testPharmaPulse
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.profiles.active=dev
 
-# Hibernate configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
