--- a/backend_PharmaPulse/src/main/resources/application.properties
+++ b/backend_PharmaPulse/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=backend_PharmaPulse
 server.port=8090
 spring.profiles.active=dev
-
+management.endpoints.web.exposure.include=*
