--- a/backend_PharmaPulse/pom.xml
+++ b/backend_PharmaPulse/pom.xml
@@ -134,6 +134,16 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.14.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+			<version>1.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
