Purchase Invoice POST service implemented
POST mapping to add a Purchase invoice is now completed.

--- a/backend_PharmaPulse/src/main/resources/application-prod.properties
+++ b/backend_PharmaPulse/src/main/resources/application-prod.properties
@@ -1,4 +1,9 @@
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
+# Enable Prometheus and Zipkin in production
+management.prometheus.metrics.export.enabled=true
+management.tracing.enabled=true
+spring.zipkin.enabled=true
+
 
 
