--- a/backend_PharmaPulse/src/main/resources/application-dev.properties
+++ b/backend_PharmaPulse/src/main/resources/application-dev.properties
@@ -4,4 +4,10 @@ spring.datasource.password=King@hell
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-management.endpoints.web.exposure.include=mappings,info,health,env,beans
+management.endpoints.web.exposure.include=health,metrics
+
+# Disable Prometheus and Zipkin in dev
+management.prometheus.metrics.export.enabled=false
+management.tracing.enabled=false
+spring.zipkin.enabled=false
+spring.sleuth.enabled=false
