--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -18,7 +18,10 @@
     "*.css": "stylelint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/material": "^6.4.1",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
     "prop-types": "^15.8.1",
