--- a/backend_PharmaPulse/src/main/resources/application-dev.properties
+++ b/backend_PharmaPulse/src/main/resources/application-dev.properties
@@ -1,12 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pharmapulsedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/pharmapulsedb?currentSchema=public
 spring.datasource.username=postgres
-
 spring.datasource.password=King@hell
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 management.endpoints.web.exposure.include=health,metrics
 
+#Flway Migrations
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
 # Disable Prometheus and Zipkin in dev
 management.prometheus.metrics.export.enabled=false
 management.tracing.enabled=false
