--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -1,10 +1,15 @@
 logging.level.org.springframework=debug
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testPharmaPulse
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# PostgresSQl Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username=testuser
+spring.datasource.password=testpassword
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#Flway Migrations
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
+
+
