--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -1,10 +1,9 @@
 logging.level.org.springframework=debug
 # PostgresSQl Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username=testuser
-spring.datasource.password=testpassword
+spring.datasource.url=jdbc:postgresql://localhost:${POSTGRESQL_PORT:5432}/test_db
+spring.datasource.username=test_user
+spring.datasource.password=test_password
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #Flway Migrations
 spring.flyway.enabled=true
