--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:${POSTGRESQL_PORT:5432}/test_d
 spring.datasource.username=test_user
 spring.datasource.password=test_password
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #Flway Migrations
 spring.flyway.enabled=true
