--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework=debug
 # PostgresSQl Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:${POSTGRESQL_PORT:5432}/test_db
+spring.datasource.url=jdbc:tc:postgresql:15-alpine:///test_db
 spring.datasource.username=test_user
 spring.datasource.password=test_password
 spring.jpa.hibernate.ddl-auto=validate
