--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^6.4.1",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "primereact": "^10.9.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
