--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -23,7 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.1",
-    "axois": "^0.0.1-security",
+    "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
     "primeicons": "^7.0.0",
