--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "prop-types": "^15.8.1",
@@ -35,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
