--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
