--- a/backend_PharmaPulse/src/main/resources/application-dev.properties
+++ b/backend_PharmaPulse/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pharmapulsedb?currentSchema=public
 spring.datasource.username=postgres
-spring.datasource.password=RT129BQ*a
+spring.datasource.password=King@hell
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
