--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -1,15 +1,17 @@
-logging.level.org.springframework=debug
-# PostgresSQl Database configuration
-spring.datasource.url=jdbc:tc:postgresql:15-alpine:///test_db
-spring.datasource.username=test_user
-spring.datasource.password=test_password
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+management.endpoints.web.exposure.include=health,metrics
 
 #Flway Migrations
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
+# Disable Prometheus and Zipkin in dev
+management.prometheus.metrics.export.enabled=false
+management.tracing.enabled=false
+spring.zipkin.enabled=false
+spring.sleuth.enabled=false
 
 
