--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.1",
     "yup": "^1.6.1"
   },
