--- a/backend_PharmaPulse/src/main/resources/application-test.properties
+++ b/backend_PharmaPulse/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
 logging.level.org.springframework=debug
 # PostgresSQl Database configuration
 spring.datasource.url=jdbc:tc:postgresql:15-alpine:///test_db
-spring.datasource.username=test_user
-spring.datasource.password=test_password
+spring.datasource.username=postgres
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
