--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3123",
     "build": "vite build",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -25,7 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.1",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
     "jwt-decode": "^4.0.0",
