--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.8.4",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
