--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
