--- a/backend_PharmaPulse/src/main/resources/application-dev.properties
+++ b/backend_PharmaPulse/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pharmapulsedb?currentSchema=public
 spring.datasource.username=postgres
-spring.datasource.password=King@hell
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
