--- a/frontend_PharmaPulse/package.json
+++ b/frontend_PharmaPulse/package.json
@@ -26,19 +26,21 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.1",
     "@stomp/stompjs": "^7.1.0",
-    "axios": "^1.8.2",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
     "frontend-pharmapulse": "file:",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
-    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
