--- a/backend_PharmaPulse/src/main/resources/application-dev.properties
+++ b/backend_PharmaPulse/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pharmapulsedb?currentSchema=public
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
