--- a/frontend_PharmaPulse/.gitignore
+++ b/frontend_PharmaPulse/.gitignore
@@ -1,3 +1,4 @@
+se\frontend_PharmaPulse\.gitignore
 # Logs
 logs
 *.log
@@ -22,3 +23,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Keep template files
+!.env.development
+!.env.production
